2006-11-21  Akim Demaille  <demaille@gostai.com>

	Formatting changes
	* hash.hh, tests/singleton2.cc, uffloat.hh,
	* ull-fixed-point.cc, ulong-fixed-point.hh: Run reindent.

2006-11-21  Akim Demaille  <demaille@gostai.com>

	Clean valgrind files
	* tests/Makefile.am (CLEANFILES): Here.

2006-11-21  Akim Demaille  <demaille@gostai.com>

	Improve win32 use
	* utime.hh: Include win32.
	Avoid cast using LARGE_INTEGER.

2006-11-21  Akim Demaille  <demaille@gostai.com>

	Fix the test suite
	* tests/Makefile.am: Create libport/config.h inside tests/.
	* tests/common_ufloat1.cc, tests/singleton1.cc, tests/udouble1.cc,
	* tests/udoubletab1.cc, tests/uffloat1.cc, tests/uffloattab1.cc,
	* tests/ufloat1.cc, tests/ufloattab1.cc, tests/ullfp1.cc,
	* tests/ullfptab1.cc:
	Prefix symbols by LIBPORT_ according to changes in libport.
	Check that we use tests/libport/config.h, not libport/config.h.

2006-11-21  Akim Demaille  <demaille@gostai.com>

	test.sh is not to be shipped
	* tests/Makefile.am: Adjust.

2006-11-21  Akim Demaille  <demaille@gostai.com>

	Fix the tests
	* Makefile.am: Remove.
	Now libport.mk must only be included by the top-level Makefile.am.
	* tests/Makefile.am: Don't pass arbitrary -I, in particular
	do not pass -I??/libport since we include cstdlib.

2006-11-21  Akim Demaille  <demaille@gostai.com>

	Use svn-externals.mk
	* Makefile.am: here.

2006-11-21  Akim Demaille  <demaille@gostai.com>

	Use svn-externals.mk
	* Makefile.am: here.

2006-11-20  Akim Demaille  <akim@lrde.epita.fr>

	* Makefile.am: Use svn-externals.mk.

2006-11-16  Akim Demaille  <akim.demaille@gmail.com>

	containers.*
	* containers.hh, containers.hxx: New.
	* README, libport.mk: Adjust.

2006-11-15  Akim Demaille  <akim.demaille@gmail.com>

	cstring instead of string.hh
	* string.hh: Rename as...
	* cstring: this.
	* libport.mk: Adjust.
	Make the svn bits factorable.

2006-11-15  Akim Demaille  <akim.demaille@gmail.com>

	libport/string.hh
	* string.hh: New.
	* libport.mk: Adjust.
